# UniversityAPI

./: .gitignore  pyproject.toml  requirements.txt
app/: config.py  database.py  lifespan.py  main.py
app/alembic/versions/: 05d302ede7b7_first_init.py
app/core/: config.py
app/core/models/: __init__.py  base.py  db_helper.py  orders.py
app/core/utils/: tablename_creator.py
app/major/: models.py  router.py  schemas.py  service.py
app/migration/: env.py
app/migration/versions/: 62503266bede_fix_majortable_3.py  77a4d0fa804e_fix_majortable.py  7c8b7792baed_fix_studenttable_adress_not_uniqe.py  80b4fcbad591_fix.py  b20406282ce7_first_init_migration.py  c1b9e78a05f6_fix_majortable_2.py
app/service/: base.py
app/students/: models.py  rb.py  router.py  schemas.py  service.py
